fix(nitrite): correct upsert, cascade, and optimistic locking semantics
- Restore updateOne() to OperationType.UPDATE + op.update() so cascade updates go through the UPDATE branch and call persistNewCascadeChildren, fixing new cascade children not being persisted on re-save
- Use updateOptions(upsert = versionProp == null) in single-entity UPDATE path: versioned entities use strict update (version filter must fail for OL), non-versioned entities use upsert to support pre-assigned IDs
- Fix NitriteEntitiesOperations batch UPDATE to use updateOptions(false): updateAll() must never insert
- Guard associatedEntity.getIdentity() in persistNewCascadeChildren with try-catch ISE — skip entities with no identity (e.g. NitriteComplexValue) rather than throwing
- Batch UPDATE path uses upsert = versionProp == null — non-versioned entities get insert-if-absent, versioned get strict update
- Add LOG.debug to ObjectRepositoryWriter ISE catch to aid diagnosis

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>